# ynab2splitwise

./: .flake8  .gitignore  Dockerfile  README.md  config.sample.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  lint.yml
ansible/ynab2splitwise/: README.md
ansible/ynab2splitwise/defaults/: main.yml
ansible/ynab2splitwise/meta/: main.yml
ansible/ynab2splitwise/tasks/: main.yml
ansible/ynab2splitwise/templates/: config.yml.j2
ansible/ynab2splitwise/vars/: main.yml
ynab2splitwise/: backfill.py  sync.py
